tests/ui/transmutability/primitives/numbers.next.stderr
error[E0277]: `i8` cannot be safely transmuted into `i16`
  --> $DIR/numbers.rs:64:40
   |
LL |     assert::is_transmutable::<   i8,   i16>();
   |                                        ^^^ the size of `i8` is smaller than the size of `i16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `u16`
  --> $DIR/numbers.rs:65:40
   |
LL |     assert::is_transmutable::<   i8,   u16>();
   |                                        ^^^ the size of `i8` is smaller than the size of `u16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `i32`
  --> $DIR/numbers.rs:66:40
   |
LL |     assert::is_transmutable::<   i8,   i32>();
   |                                        ^^^ the size of `i8` is smaller than the size of `i32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `f32`
  --> $DIR/numbers.rs:67:40
   |
LL |     assert::is_transmutable::<   i8,   f32>();
   |                                        ^^^ the size of `i8` is smaller than the size of `f32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `u32`
  --> $DIR/numbers.rs:68:40
   |
LL |     assert::is_transmutable::<   i8,   u32>();
   |                                        ^^^ the size of `i8` is smaller than the size of `u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:69:40
   |
LL |     assert::is_transmutable::<   i8,   u64>();
   |                                        ^^^ the size of `i8` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:70:40
   |
LL |     assert::is_transmutable::<   i8,   i64>();
   |                                        ^^^ the size of `i8` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:71:40
   |
LL |     assert::is_transmutable::<   i8,   f64>();
   |                                        ^^^ the size of `i8` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:72:39
   |
LL |     assert::is_transmutable::<   i8,  u128>();
   |                                       ^^^^ the size of `i8` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i8` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:73:39
   |
LL |     assert::is_transmutable::<   i8,  i128>();
   |                                       ^^^^ the size of `i8` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `i16`
  --> $DIR/numbers.rs:75:40
   |
LL |     assert::is_transmutable::<   u8,   i16>();
   |                                        ^^^ the size of `u8` is smaller than the size of `i16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `u16`
  --> $DIR/numbers.rs:76:40
   |
LL |     assert::is_transmutable::<   u8,   u16>();
   |                                        ^^^ the size of `u8` is smaller than the size of `u16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `i32`
  --> $DIR/numbers.rs:77:40
   |
LL |     assert::is_transmutable::<   u8,   i32>();
   |                                        ^^^ the size of `u8` is smaller than the size of `i32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `f32`
  --> $DIR/numbers.rs:78:40
   |
LL |     assert::is_transmutable::<   u8,   f32>();
   |                                        ^^^ the size of `u8` is smaller than the size of `f32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `u32`
  --> $DIR/numbers.rs:79:40
   |
LL |     assert::is_transmutable::<   u8,   u32>();
   |                                        ^^^ the size of `u8` is smaller than the size of `u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:80:40
   |
LL |     assert::is_transmutable::<   u8,   u64>();
   |                                        ^^^ the size of `u8` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:81:40
   |
LL |     assert::is_transmutable::<   u8,   i64>();
   |                                        ^^^ the size of `u8` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:82:40
   |
LL |     assert::is_transmutable::<   u8,   f64>();
   |                                        ^^^ the size of `u8` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:83:39
   |
LL |     assert::is_transmutable::<   u8,  u128>();
   |                                       ^^^^ the size of `u8` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:84:39
   |
LL |     assert::is_transmutable::<   u8,  i128>();
   |                                       ^^^^ the size of `u8` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `i32`
  --> $DIR/numbers.rs:86:40
   |
LL |     assert::is_transmutable::<  i16,   i32>();
   |                                        ^^^ the size of `i16` is smaller than the size of `i32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `f32`
  --> $DIR/numbers.rs:87:40
   |
LL |     assert::is_transmutable::<  i16,   f32>();
   |                                        ^^^ the size of `i16` is smaller than the size of `f32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `u32`
  --> $DIR/numbers.rs:88:40
   |
LL |     assert::is_transmutable::<  i16,   u32>();
   |                                        ^^^ the size of `i16` is smaller than the size of `u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:89:40
   |
LL |     assert::is_transmutable::<  i16,   u64>();
   |                                        ^^^ the size of `i16` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:90:40
   |
LL |     assert::is_transmutable::<  i16,   i64>();
   |                                        ^^^ the size of `i16` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:91:40
   |
LL |     assert::is_transmutable::<  i16,   f64>();
   |                                        ^^^ the size of `i16` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:92:39
   |
LL |     assert::is_transmutable::<  i16,  u128>();
   |                                       ^^^^ the size of `i16` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i16` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:93:39
   |
LL |     assert::is_transmutable::<  i16,  i128>();
   |                                       ^^^^ the size of `i16` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `i32`
  --> $DIR/numbers.rs:95:40
   |
LL |     assert::is_transmutable::<  u16,   i32>();
   |                                        ^^^ the size of `u16` is smaller than the size of `i32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `f32`
  --> $DIR/numbers.rs:96:40
   |
LL |     assert::is_transmutable::<  u16,   f32>();
   |                                        ^^^ the size of `u16` is smaller than the size of `f32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `u32`
  --> $DIR/numbers.rs:97:40
   |
LL |     assert::is_transmutable::<  u16,   u32>();
   |                                        ^^^ the size of `u16` is smaller than the size of `u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:98:40
   |
LL |     assert::is_transmutable::<  u16,   u64>();
   |                                        ^^^ the size of `u16` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:99:40
   |
LL |     assert::is_transmutable::<  u16,   i64>();
   |                                        ^^^ the size of `u16` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:100:40
   |
LL |     assert::is_transmutable::<  u16,   f64>();
   |                                        ^^^ the size of `u16` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:101:39
   |
LL |     assert::is_transmutable::<  u16,  u128>();
   |                                       ^^^^ the size of `u16` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:102:39
   |
LL |     assert::is_transmutable::<  u16,  i128>();
   |                                       ^^^^ the size of `u16` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i32` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:104:40
   |
LL |     assert::is_transmutable::<  i32,   u64>();
   |                                        ^^^ the size of `i32` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i32` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:105:40
   |
LL |     assert::is_transmutable::<  i32,   i64>();
   |                                        ^^^ the size of `i32` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i32` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:106:40
   |
LL |     assert::is_transmutable::<  i32,   f64>();
   |                                        ^^^ the size of `i32` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i32` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:107:39
   |
LL |     assert::is_transmutable::<  i32,  u128>();
   |                                       ^^^^ the size of `i32` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i32` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:108:39
   |
LL |     assert::is_transmutable::<  i32,  i128>();
   |                                       ^^^^ the size of `i32` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f32` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:110:40
   |
LL |     assert::is_transmutable::<  f32,   u64>();
   |                                        ^^^ the size of `f32` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f32` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:111:40
   |
LL |     assert::is_transmutable::<  f32,   i64>();
   |                                        ^^^ the size of `f32` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f32` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:112:40
   |
LL |     assert::is_transmutable::<  f32,   f64>();
   |                                        ^^^ the size of `f32` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f32` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:113:39
   |
LL |     assert::is_transmutable::<  f32,  u128>();
   |                                       ^^^^ the size of `f32` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f32` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:114:39
   |
LL |     assert::is_transmutable::<  f32,  i128>();
   |                                       ^^^^ the size of `f32` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `u64`
  --> $DIR/numbers.rs:116:40
   |
LL |     assert::is_transmutable::<  u32,   u64>();
   |                                        ^^^ the size of `u32` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `i64`
  --> $DIR/numbers.rs:117:40
   |
LL |     assert::is_transmutable::<  u32,   i64>();
   |                                        ^^^ the size of `u32` is smaller than the size of `i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `f64`
  --> $DIR/numbers.rs:118:40
   |
LL |     assert::is_transmutable::<  u32,   f64>();
   |                                        ^^^ the size of `u32` is smaller than the size of `f64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:119:39
   |
LL |     assert::is_transmutable::<  u32,  u128>();
   |                                       ^^^^ the size of `u32` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:120:39
   |
LL |     assert::is_transmutable::<  u32,  i128>();
   |                                       ^^^^ the size of `u32` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u64` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:122:39
   |
LL |     assert::is_transmutable::<  u64,  u128>();
   |                                       ^^^^ the size of `u64` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `u64` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:123:39
   |
LL |     assert::is_transmutable::<  u64,  i128>();
   |                                       ^^^^ the size of `u64` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i64` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:125:39
   |
LL |     assert::is_transmutable::<  i64,  u128>();
   |                                       ^^^^ the size of `i64` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `i64` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:126:39
   |
LL |     assert::is_transmutable::<  i64,  i128>();
   |                                       ^^^^ the size of `i64` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f64` cannot be safely transmuted into `u128`
  --> $DIR/numbers.rs:128:39
   |
LL |     assert::is_transmutable::<  f64,  u128>();
   |                                       ^^^^ the size of `f64` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `f64` cannot be safely transmuted into `i128`
  --> $DIR/numbers.rs:129:39
   |
LL |     assert::is_transmutable::<  f64,  i128>();
   |                                       ^^^^ the size of `f64` is smaller than the size of `i128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/numbers.rs:14:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 57 previous errors

For more information about this error, try `rustc --explain E0277`.
